# python-flask-demowebsite

./: .env.sample  README.md  board.sqlite  pyproject.toml  requirements.txt
board/: __init__.py  errors.py  pages.py  posts.py  store.py
board/static/: styles.css  styles.login.css
board/templates/: _navigation.html  base.html
board/templates/pages/: about.html  home.html  login.html
board/templates/posts/: create.html  posts.html
flaskr/: __init__.py  auth.py  blog.py  db.py  health.py
flaskr/static/: style.css
flaskr/templates/: _navigation.html  base.html
flaskr/templates/auth/: login.html  register.html
tests/: conftest.py  test_auth.py  test_factory.py
