[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
  "flask",
  "blinker==1.7.0",
  "click==8.1.7",
  "colorama==0.4.6",
  "Flask==3.0.1",
  "itsdangerous==2.1.2",
  "Jinja2==3.1.3",
  "MarkupSafe==2.1.4",
  "Werkzeug==3.0.1",
  "python-dotenv~=1.0.1"
]
requires-python = ">=3.8"
authors = [
  {name = "Frankline Sumelong", email = "epiefrankline@example.com"},
]
maintainers = [
  {name = "Frankline Sumelong", email = "maintainer@example.com"}
]
description = "The basic blog app built in the Flask tutorial."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["blog", "post", "register", "login"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/sumelong/python-flask-demowebsite.git"
"Bug Tracker" = "https://github.com/sumelong/python-flask-demowebsite/issues"
Changelog = ""


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]